# plonky2-circom-practice

./: README.md
plonky2-circom-practice/: Cargo.toml
plonky2-circom-practice/circom/circuits/: constants.circom  gates.circom
plonky2-circom-practice/circom/test/data/: conf.json  proof.json
plonky2-circom-practice/src/circuits/: addition.rs
